fix: set body width to 1925px and removing whitespace between team member cards

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  width: 1920px;
+  width: 1925px;
 }
 
 @font-face {
@@ -206,6 +206,7 @@ nav {
 
 .our-team__list {
   list-style: none;
+  font-size: 0;
 }
 
 .our-team__item {
